--- a/P000233.opf/layers/v001/BookTitle.yml
+++ b/P000233.opf/layers/v001/BookTitle.yml
@@ -1,5 +1,5 @@
 id: 20623d1f9f4241609e8444786b141bc7
-annotation_type: book_title
+annotation_type: BookTitle
 revision: '00001'
 annotations:
 - span:
