--- a/P000233.opf/layers/v001/Yigchung.yml
+++ b/P000233.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: cbd714a597ac41c986012d2c1a1e7ca3
-annotation_type: tsawa
+annotation_type: Tsawa
 revision: '00001'
 annotations:
 - id: ac61d5523be546cd807707214229f354
