corrected annotation_type

--- a/P000233.opf/layers/v001/Yigchung.yml
+++ b/P000233.opf/layers/v001/Yigchung.yml
@@ -1,5 +1,5 @@
 id: cbd714a597ac41c986012d2c1a1e7ca3
-annotation_type: Tsawa
+annotation_type: Yigchung
 revision: '00001'
 annotations:
   ac61d5523be546cd807707214229f354:
