--- a/P000233.opf/layers/v001/Quotation.yml
+++ b/P000233.opf/layers/v001/Quotation.yml
@@ -1,5 +1,5 @@
 id: f2389cb370024245a84658a80407fafa
-annotation_type: Tsawa
+annotation_type: Quotation
 revision: '00001'
 annotations:
   6206ebc941e244ce9a6cb3fec8d13d02:
