--- a/P000233.opf/meta.yml
+++ b/P000233.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000233
 initial_creation_type: ebook
+created_at: 31/01/2020
+last_modified_at: 25/11/2021
 source_metadata:
   title: ༄༅། །ཚིག་བདུན་བླ་མའི་རྣལ་འབྱོར་བྱིན་རླབས་ཆར་འབེབས་ཀྱི་དམིགས་ཁྲིད་ཉུང་བསྡུས་ཟབ་ལམ་བཅུད་དྲིལ་ཞེས་བྱ་བ་བཞུགས་སོ།
     །
